* strftime.c (rb_strftime_with_timespec): fix carrir-up bug and   overwrite '+' with '-' if negative offset less than a hour.   [ruby-core:44447][Bug #6323]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35399 b2dd03c8-39d4-4d8f-98ff-823fe69b080e